# Store_API

./: pyproject.toml
store/core/: config.py
tests/: conftest.py
tests/controllers/: test_product.py
tests/usecases/: test_product.py
